# IQView

./: .gitignore  README.md  changelog.md  dsp.py  main.py  prepare_offline.py  profile_results.prof  pyproject.toml  requirements.txt  run_prof.py  test_keys.py  test_menu.py  testing.py  ui.py  uninstall_iqview.bat  uninstall_iqview.sh  utils.py
docs/: frequency_domain.md  spectrogram.md  time_domain.md
dsp/: __init__.py  utils.py
examples/plugins/: detect_bursts.py  detect_peaks.py  mark_view.py
iqview/: __init__.py  main.py
iqview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
iqview/dsp/: __init__.py  dsp.py  utils.py
iqview/plugins/: __init__.py  plugin_manager.py
iqview/ui/: detached_window.py  export_dialog.py  marker_panel.py  overlay.py  overlay_dialog.py  overlay_panel.py  settings_dialog.py  side_panel.py  spectrogram_view.py  themes.py  time_domain_marker_panel.py  time_domain_view.py  widgets.py
iqview/ui/frequency_domain/: marker_panel.py  view.py
iqview/ui/main_window/: __init__.py  (+5 more)
iqview/utils/: desktop.py  helpers.py  settings_manager.py
matlab/: iqview_stdin.m
profiler/: dsp_deep_report.txt  dsp_deep_report_utf8.txt  dsp_line_profiling.txt  optimized_report.txt  optimized_report_utf8.txt  profile_results.prof  profile_script.py  profiling_report.txt
scripts/: build_project.py  make_deb.py
testing/: test_psd.py  testing.py
ui/: __init__.py  main_window.py  marker_panel.py  side_panel.py  spectrogram_view.py  widgets.py
ui/main_window/: data_handler.py  marker_manager.py  view_controller.py
(+2 files in other folders)
