[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iqview"
version = "0.1.2"
description = "High-performance Static RF Spectrogram Viewer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "PyQt6",
    "pyqtgraph >= 0.13.0",
    "PyOpenGL",
    "scipy"
]

[project.scripts]
iqview = "iqview.main:main"

[project.gui-scripts]
iqview-gui = "iqview.main:main"

[tool.setuptools.package-data]
iqview = ["resources/*.png", "resources/*.ico"]

[tool.setuptools.packages.find]
where = ["."]
include = ["iqview*"]
